<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/consLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/slide1"
    tools:context=".signIn"
    android:layoutDirection="ltr">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:baselineAlignBottom="false"
        android:clickable="true"
        app:backgroundTint="#5D8380"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        app:srcCompat="@drawable/settings" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSignIn"
        android:textColor="#ffce1f"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inputForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959" />

    <Button
        android:id="@+id/button2"
        android:layout_width="101dp"
        android:layout_height="35dp"
        android:backgroundTint="#ffce1f"
        android:paddingLeft="10dp"
        android:paddingTop="1dp"
        android:paddingRight="10dp"
        android:paddingBottom="1dp"
        android:text="@string/txtBttnSignIn"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.675" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginBottom="12dp"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.734"
        app:srcCompat="@drawable/ccslogo"
        app:tint="#ffce1f" />

    <LinearLayout
        android:id="@+id/inputForm"
        android:layout_width="345dp"
        android:layout_height="141dp"
        android:background="@drawable/edittextstyle"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.379">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingBottom="7dp"
            android:weightSum="10">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1.25"
                android:paddingLeft="5dp"
                android:src="@drawable/person"
                app:tint="#ffce1f" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="#ffce1f"
                app:hintEnabled="false"
                app:hintTextColor="#c4b56a"
                app:shapeAppearance="?attr/shapeAppearanceCornerExtraLarge">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inputEmailHint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="6dp"
                    android:textColor="@color/black"
                    android:textColorHint="#D3D3D3"
                    android:textSize="10sp" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <!-- First row done -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:gravity="top"
            android:orientation="horizontal"
            android:paddingTop="7dp"
            android:weightSum="10">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1.25"
                android:paddingLeft="5dp"
                android:src="@drawable/lock"
                app:tint="#ffce1f" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0px"
                android:layout_height="27dp"
                android:layout_weight="7"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="#ffce1f"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#808080"
                app:shapeAppearance="?attr/shapeAppearanceCornerExtraLarge">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/txtPassword"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="6dp"
                    android:textColor="@color/black"
                    android:textColorHint="#D3D3D3"
                    android:textSize="10sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0px"
                android:layout_height="33dp"
                android:layout_weight="4"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="#ffce1f"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#808080"
                app:shapeAppearance="?attr/shapeAppearanceCornerExtraLarge">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPasswordTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inputPassConfHint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="#808080"
                    android:textSize="11sp" />

            </com.google.android.material.textfield.TextInputLayout>
            -->


        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/txtCreateAccountInstead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/txtNewUserCreateAccount"
        android:textColor="#ffce1f"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>