<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:layoutDirection="ltr"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/formTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtChooseUsername"
        android:textColor="#ffce1f"
        android:textSize="15sp"
        android:textStyle="bold"
        android:transitionName="shared_title_transition"
        app:layout_constraintBottom_toTopOf="@+id/inputForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844" />

    <ImageView
        android:id="@+id/logoView"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        android:transitionName="shared_logo_transition"
        app:layout_constraintBottom_toTopOf="@+id/inputForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.577"
        app:srcCompat="@drawable/ccslogo"
        app:tint="#ffce1f" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:backgroundTint="#ffce1f"
        android:elevation="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="1dp"
        android:paddingRight="10dp"
        android:paddingBottom="1dp"
        android:text="@string/bttnCreateAccount"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63" />

    <LinearLayout
        android:id="@+id/inputForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:transitionName="inputForm_transition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.391">


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:baselineAlignBottom="false"
        android:clickable="true"
        app:backgroundTint="#5D8380"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/settings" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="33dp"
        android:layout_height="39dp"
        android:indeterminateTint="#ffce1f"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonBack"
        android:layout_width="52dp"
        android:layout_height="55dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        app:backgroundTint="#5D8380"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107"
        app:srcCompat="@drawable/arrow_back_fill0_wght400_grad0_opsz24" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:hint="@string/txtUsername"
        android:textColorHint="#D3D3D3"
        app:boxStrokeColor="#ffce1f"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameTextField"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:backgroundTint="@android:color/transparent"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:inputType="text"
            android:maxLength="12"
            android:maxLines="1"
            android:padding="7dp"
            android:textColor="@color/black"
            android:textColorHighlight="#ffce1f"
            android:textColorHint="#F0F0F0  "
            android:textColorLink="@color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>